fixed double scrolling on mac os and added esc menu closing

--- a/src/stylus/assets/preloader.styl
+++ b/src/stylus/assets/preloader.styl
@@ -2,6 +2,7 @@
 json('../../js/configurations/animation.json');
 
 .logo.preloader-logo
+    will-change stroke-dashoffset
     opacity 0
     stroke-dasharray 1500
     stroke-dashoffset 1500
